Fix listing of UNC paths without a given share